# nomos

./: .gitignore  BENCHMARK_REPORT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  architecture.md  bench.sh  build-ebpf.sh  build-wasm.sh
dashboard/: app.js  index.html  styles.css
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  FAQ.md  GETTING_STARTED.md
nomos-core/: Cargo.toml
nomos-core/benches/: haltless.rs  proxy_throughput.rs  wasm_healer.rs
nomos-core/benches/testdata/: large.json
nomos-core/src/: control.rs  ebpf.rs  engine.rs  error.rs  lib.rs  main.rs  middleware.rs  proxy.rs  runtime.rs  schema.rs  wasm_host.rs
nomos-core/src/engine/: confidence.rs  embedding.rs  healer.rs  healing.rs  lsh.rs  mod.rs  simd.rs
nomos-core/src/nlp/: combined.rs  jaro.rs  levenshtein.rs  mod.rs  synonym.rs  tfidf.rs
nomos-core/wit/: healer.wit
nomos-ebpf/: Cargo.toml
nomos-ebpf-common/: Cargo.toml
nomos-ebpf-common/src/: lib.rs
nomos-ebpf/.cargo/: config.toml
nomos-ebpf/src/: main.rs
nomos-healer-guest/: Cargo.toml
nomos-healer-guest/src/: healer.rs  json_transform.rs  lib.rs
tests/: README.md  accuracy_v1.py  boundary_test.py  chaos_suite.py  hot_swap_validator.py  memory_monitor.py  mock_upstream.py  nomos_tui.py  requirements.txt  run_chaos_suite.py  stress_test.py  upstream_server.py
