[package]
name = "nomos-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Zero-latency autonomous schema-healing proxy core"

[dependencies]
# Async Runtime
tokio = { workspace = true }

# HTTP Stack
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
http = { workspace = true }

# Serialization
simd-json = { workspace = true }
serde = { workspace = true }

# Memory Management
bumpalo = { workspace = true }
bytes = { workspace = true }

# Concurrency
arc-swap = { workspace = true }
parking_lot = { workspace = true }
crossbeam-utils = { workspace = true }

# Thread Affinity
core_affinity = { workspace = true }

# Hashing
xxhash-rust = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# eBPF Userspace Loader
aya = { workspace = true }
aya-log = { workspace = true }
nomos-ebpf-common = { path = "../nomos-ebpf-common", features = ["userspace"] }

# WASM Runtime for sandboxed healers
wasmtime = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio-test = "0.4"
wasmparser = "0.207.0"

[[bench]]
name = "proxy_throughput"
harness = false

[[bench]]
name = "haltless"
harness = false

[[bench]]
name = "wasm_healer"
harness = false
