[package]
name = "nomos-ebpf"
version = "0.1.0"
edition = "2021"
description = "Nomos XDP/eBPF program for kernel-level packet classification"
license = "MIT"

[dependencies]
# eBPF kernel-space framework
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"

# Shared types with userspace
nomos-ebpf-common = { path = "../nomos-ebpf-common" }

[[bin]]
name = "nomos-ebpf"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
overflow-checks = false
lto = true
panic = "abort"

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
lto = true
panic = "abort"
codegen-units = 1
