[package]
name = "nomos-ebpf"
version = "0.1.0"
edition = "2021"
description = "Nomos XDP/eBPF program for kernel-level packet classification"
license = "MIT"

[dependencies]
# eBPF kernel-space framework (use latest Aya)
aya-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }

# Shared types with userspace
nomos-ebpf-common = { path = "../nomos-ebpf-common" }

[[bin]]
name = "nomos-ebpf"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
overflow-checks = false
lto = true
panic = "abort"

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
lto = true
panic = "abort"
codegen-units = 1
